--- a/assets/src/css/index.css
+++ b/assets/src/css/index.css
@@ -55,7 +55,7 @@ body {
     .hero-section {
         width: 100vw;
         height: 60vh;
-        background-image: url(/Hayjet-Heilpraktikerin/assets/src/img/hero/hero-img.png);
+        background-image: url(/assets/src/img/hero/hero-img.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -129,9 +129,75 @@ body {
         }
     }
 
-    .card-section {
+    .bento-section {
         width: 100vw;
-        height: 50vh;
-        background-color: red;
+        padding: 1rem;
+        background-color: var(--card-border);
+        margin: 0;
+
+        .bento {
+            display: flex;
+            justify-content: space-between;
+            margin: 0;
+            padding: .4rem;
+            align-items: center;
+            justify-content: center;
+
+            .bento-rechts {
+                border: 1px solid hotpink;
+                width: 49%;
+                display: flex;
+                flex-direction: column;
+                gap: 4rem;
+
+                .rechts-1 {
+                    border: 1px solid rgb(143, 43, 43);
+
+                    &:hover {
+                        background-color: skyblue;
+                    }
+                }
+
+                .rechts-2 {
+                    border: 1px solid rgb(105, 255, 155);
+                }
+
+                .rechts-3 {
+                    border: 1px solid #BFC8EA;
+                }
+
+            }
+
+            .bento-links {
+                border: 1px solid red;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 4rem;
+
+                .links-1 {
+                    border-radius: .4rem;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border: 1px solid green;
+                    height: 1.6rem;
+                    width: 8rem;
+                    background-position: center;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    background-image: url(/assets/src/img/content/card/Akupunktur-ansikt.jpg);
+                }
+
+                .links-2 {
+                    border: 1px solid blue;
+                }
+            }
+
+            .links-3 {
+                border: 1px solid rebeccapurple;
+            }
+        }
     }
+
 }
